# AdventOfCode

./: .gitignore  README.md  main.html
2015/: run_tests.sh
2015/Day1/: problem.md
2015/Day10/: problem.md
2015/Day11/: problem.md
2015/Day12/: problem.md
2015/Day2/: problem.md
2015/Day3/: problem.md
2015/Day4/: problem.md
2015/Day5/: problem.md
2015/Day6/: problem.md
2015/Day7/: problem.md
2015/Day8/: problem.md
2015/Day9/: problem.md
2019/Day1/: solution  solution.c
2019/Day2/: solution  solution.c
2019/include/: aoc.h  util.c
2020/Day1/: problem.txt  solution.py
2020/Day10/: solution.py
2020/Day11/: solution.py
2020/Day12/: solution.py
2020/Day13/: problem.txt  solution.py
2020/Day14/: problem.txt  solution.py
2020/Day15/: problem.txt  solution.py
2020/Day16/: problem.txt  solution.py
2020/Day17/: problem.txt  solution.py
2020/Day18/: problem.txt  solution.py
2020/Day19/: example.txt  solution.py  test_input_part2.txt
2020/Day2/: solution.py
2020/Day20/: problem.txt  solution.py
2020/Day21/: solution.py
2020/Day22/: solution.py
2020/Day23/: example.txt  solution.py
2020/Day24/: solution.py  solution2.py
2020/Day25/: input.txt  solution.py
2020/Day3/: solution.py
2020/Day4/: problem.txt  solution.py
2020/Day5/: solution.py
2020/Day6/: problem.txt  solution.py
2020/Day7/: solution.py
2020/Day8/: solution.py
2020/Day9/: solution.py
2020/DayN/: solution.py
2021/: mkdocs.yml
2021/Day1/: CMakeLists.txt  approach.md
2021/Day10/: CMakeLists.txt  approach.md  (+1 more)
2021/Day8/: CMakeLists.txt  approach.md  challenge.md
2021/Day8/include/: day8.h
2021/Day8/src/: day8.c
2021/Day8/tests/: day8_test.c  main_tests.c
2022/: README.md  run_tests.sh
2022/Day16/: CMakeLists.txt  approach.md
2023/: README.md  cpp_tests.sh  run_tests.sh
2024/: README.md  run_tests.sh
(+323 files in other folders)
